generate cart scaffod and current cart module(concern)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
 				 <li><a href="http://www..../news">News</a></li> 
 				 <li><a href="http://www..../contact">Contact</a></li>
 			</ul>
+			<div id="time_line">
+				<span><%= Time.now %></span>
+			</div>
 		</div>
 		<div id="main">
 			<%= yield %>
