--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,6 +1,9 @@
 <% if notice %>
 	<p id="notice"><%= notice %></p>
 <% end %>
+<% if @counter > 5%>
+<p>Session Counter: <%= pluralize(@counter, "time") %></p>
+<% end %>
 
 <h1>Your Pragmatic Catalog</h1>
 <% cache ['store', Product.latest] do %>
@@ -11,8 +14,9 @@
 		<h3><%= product.title %></h3>
 		<%= sanitize(product.description) %>
 		<div class="price_line">
-			<span class="price"><%= number_to_currency(product.price) %></span>
-			<%= button_to 'Add to Cart', line_items_path(product_id: product) %>
+			<span class="price"><%= number_to_currency(product.price, format: "%n%u", locale: :en) %></span>
+			 <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
+			
 		</div>
 	</div>
 	<% end %>
