--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -14,7 +14,7 @@
 		<h3><%= product.title %></h3>
 		<%= sanitize(product.description) %>
 		<div class="price_line">
-			<span class="price"><%= number_to_currency(product.price, format: "%n%u", locale: :en) %></span>
+			<span class="price"><%= number_to_currency(product.price) %></span>
 			 <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
 			
 		</div>
