moving cart to sidebar & add ajax

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,15 @@
 	
 	<div id="columns">
 		<div id="side">
+			<div id="cart"><%= render @cart %></div>
+			
 			<ul>
 				<li><a href="http://www....">Home</a></li>
 				<li><a href="http://www..../faq">Questions</a></li>
 				 <li><a href="http://www..../news">News</a></li> 
 				 <li><a href="http://www..../contact">Contact</a></li>
 			</ul>
-			<div id="time_line">
-				<span><%= Time.now %></span>
-			</div>
+			
 		</div>
 		<div id="main">
 			<%= yield %>
