--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,3 +1,6 @@
 $('#cart').html("<%= escape_javascript render(@cart) %>");
+if ($('#cart tr').length > 1 && $('#cart').css('display') == 'none') { 
+	$('#cart').show('blind', 1000); 
+}
 $('#current_item').css({'background-color': '#88ff88'}).
 animate({'background-color': '#114411'}, 1000);
