Add checkout & atom feed

--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -11,5 +11,6 @@
 
 	
 </ul>
+<%= button_to 'Check out', new_order_path, method: :get %>
 <%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?'}  %>
 <% end %>
