--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,3 +1,4 @@
+$("#notice").hide();
 $('#cart').html("<%= escape_javascript render(@cart) %>");
 if ($('#cart tr').length > 1 && $('#cart').css('display') == 'none') { 
 	$('#cart').show('blind', 1000); 
