--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -11,6 +11,9 @@
 
 	
 </ul>
-<%= button_to 'Check out', new_order_path, method: :get %>
+<% unless current_page?(new_order_path) %>
+	<%= button_to 'Check out', new_order_path, method: :get %>
+<% end %>
+
 <%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?'}  %>
 <% end %>
