--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -16,8 +16,8 @@
 </p>
 
 <p>
-  <strong>Play type:</strong>
-  <%= @order.play_type %>
+  <strong>Pay type:</strong>
+  <%= @order.pay_type %>
 </p>
 
 <%= link_to 'Edit', edit_order_path(@order) %> |
