--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.text_field :email, size: 40 %>
   </div>
   <div class="field">
+    <%= f.label :ship_date %><br>
+    <%= f.datetime_field :ship_date, size: 40 %>
+  </div>
+  <div class="field">
     <%= f.label :pay_type %><br>
     <%= f.select :pay_type, Order::PAYMENT_TYPES,
 	prompt: 'Select a payment method' %>
